banner being too large should be fixed

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,10 @@ body{
     justify-content: center;
     align-items: center;
     background-color: grey;
-    height: 400px;
-    width: auto;
+    min-height: 100px;
+    
+    aspect-ratio: 400 / 50;
+    width: 100%;
 }
 
 .top{
